# PersonaForge

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: ci.yml  dependabot-auto-merge.yml  docs.yml  release.yml
migrations/: 20260104110510_initial_schema.sql  20260106140000_add_persona_name_triggers.sql
src/: config.rs  lib.rs  main.rs  state.rs
src/bot/handlers/: callbacks.rs  callbacks.rs.backup  commands.rs  messages.rs
src/db/: mod.rs
src/llm/: client.rs
src/security/: mod.rs
src/web/: search.rs
src/webapp/: api.rs  server.rs
src/webapp/static/: app.js  index.html
