[package]
name = "persona_forge"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "PersonaForge"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
axum = { version = "0.8", features = ["macros"] }
base64 = "0.22"
bincode = "1.3"
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
envy = "0.4"
futures = "0.3"
hex = "0.4"
hmac = "0.12"
log = "0.4"
mime_guess = "2.0"
pretty_env_logger = "0.5"
rand = "0.8"
reqwest = { version = "0.12", features = ["json", "multipart"] }
rust-embed = { version = "8.5", features = ["axum"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls-ring-webpki", "sqlite", "macros", "chrono"] }
teloxide = { version = "0.17", features = ["macros"] }
tokio = { version = "1.49", features = ["full"] }
tower-http = { version = "0.6", features = ["cors"] }
urlencoding = "2.1"
