[package]
name = "persona_forge"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "PersonaForge"
path = "src/main.rs"

[dependencies]
anyhow = "*"
axum = { version = "*", features = ["macros"] }
base64 = "*"
bincode = "1"
chrono = { version = "*", features = ["serde"] }
dotenv = "*"
envy = "*"
futures = "*"
hex = "*"
hmac = "*"
log = "*"
mime_guess = "*"
pretty_env_logger = "*"
rand = "*"
reqwest = { version = "*", features = ["json", "multipart"] }
rust-embed = { version = "*", features = ["axum"] }
serde = { version = "*", features = ["derive"] }
serde_json = "*"
sha2 = "*"
sqlx = { version = "*", features = ["runtime-tokio", "tls-rustls-ring-webpki", "sqlite", "macros", "chrono"] }
teloxide = { version = "*", features = ["macros"] }
tokio = { version = "*", features = ["full"] }
tower-http = { version = "*", features = ["cors"] }
urlencoding = "*"
